# mcmap

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  clean-all.cmake
doc/: config.md
misc/: biomes.json  items.json  log4cxx.properties
src/: block.cpp  block.hpp  block_data.hpp  block_layer.cpp  block_layer.hpp  blocks.hpp  chunk_map.cpp  chunk_map.hpp  config.hpp.in  item_metadata.cpp  item_metadata.hpp  main.cpp  mapper.cpp  mapper.hpp  nbt.cpp  png_image.cpp  png_image.hpp  png_reader.cpp  png_reader.hpp  region_map.cpp  region_map.hpp  texture.cpp  texture.hpp  tile.hpp  types.hpp
